Fix Jest configuration for ES modules support

--- a/.github/workflows/docker-build-main.yml
+++ b/.github/workflows/docker-build-main.yml
@@ -30,9 +30,8 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
-    # Skip tests for now due to Jest/ESM configuration issues
-    # - name: Run tests
-    #   run: npm test
+    - name: Run tests
+      run: npm test
 
     - name: Build project
       run: npm run build
